--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -35,5 +35,5 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-      - name: Clean Build Test with Maven
-        run: chmod +x mvnw && ./mvnw clean package --file pom.xml --batch-mode --update-snapshots
+      - name: Clean Build And Run IT and UT Tests with Maven
+        run: chmod +x mvnw && ./mvnw clean verify --file pom.xml --batch-mode --update-snapshots
