modularize code and jdk 21 upgrade

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-greet.message=Hello World
+spring.application.name=spring-boot-3-testing-web-complete
+greet.message=default message
+hello.message=default hello message
