--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=spring-boot-3-testing-web-complete
-greet.message=default message
-hello.message=default hello message
+spring.application.name=spring-boot-testing-web-complete
+greet.message=default greet message
+home.message=default hello message
