--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,2 +1,3 @@
 spring.config.import=classpath:application.properties
-greet.message=test message
+### override properties for tests
+greet.message=test greet message
